# task1_fossee

./: README.md  main.py  pyproject.toml  requirement.txt
my_tree/: __init__.py  node.py  operations.py  yaml_io.py
test/: test.py  test.yaml
