[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_tree"
version = "0.1.0"
description = "General tree implementation with YAML support"
readme = "README.md"
requires-python = ">=3.10"
authors = [
  { name="Kanishka", email="kanishkaa182@gmail.com" }
]

[tool.setuptools.packages.find]
where = ["."]
include = ["my_tree*"]
